# rules-js-sandbox-escape-repro

./: .bazelrc  .gitignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
repro/: BUILD.bazel  node_versions.bzl
repro/dirname-escape/: BUILD.bazel  check_dirname.mjs
repro/esbuild-resolve/: BUILD.bazel  bundle_check.mjs
repro/esbuild-resolve/src/: app.js
repro/esm-basic/: BUILD.bazel  dep.mjs  entry.mjs
repro/esm-dynamic-import/: BUILD.bazel  plugin.mjs  runner.mjs
repro/vite-dev/: BUILD.bazel  check_vite_root.mjs  index.html  package.json  vite.config.mjs
repro/vite-dev/src/: main.js
repro/vitest/: BUILD.bazel  package.json  run_vitest.mjs
repro/vitest/src/: add.test.js
