module(name = "rules_js_sandbox_escape_repro")

bazel_dep(name = "aspect_rules_js", version = "2.1.1")

####### Node.js versions #########
bazel_dep(name = "rules_nodejs", version = "6.7.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)

# Default toolchain (backward compat)
node.toolchain(node_version = "18.18.2")

# Named toolchains for multi-version testing
node.toolchain(
    name = "node18",
    node_version = "18.18.2",
)
node.toolchain(
    name = "node20",
    node_version = "20.17.0",
)
node.toolchain(
    name = "node22",
    node_version = "22.12.0",
)

use_repo(node, "node18_linux_amd64")
use_repo(node, "node18_darwin_amd64")
use_repo(node, "node18_darwin_arm64")
use_repo(node, "node18_windows_amd64")
use_repo(node, "node20_linux_amd64")
use_repo(node, "node20_darwin_amd64")
use_repo(node, "node20_darwin_arm64")
use_repo(node, "node20_windows_amd64")
use_repo(node, "node22_linux_amd64")
use_repo(node, "node22_darwin_amd64")
use_repo(node, "node22_darwin_arm64")
use_repo(node, "node22_windows_amd64")

####### npm dependencies ########
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
