load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")
load("//repro:node_versions.bzl", "NODE_TOOLCHAINS")

# Repro: __dirname escapes the runfiles tree (issue #1669)
#
# On Node <= 18.18.2, import.meta.url resolves through symlinks
# (patches don't take effect), so __dirname derived from it points
# to the source tree instead of the runfiles tree.
#
# Per-version tests:
#   bazel test //repro/dirname-escape:all --config=with-fix
#
# Manual debugging:
#   bazel run //repro/dirname-escape:run_bug
#   bazel run //repro/dirname-escape:run_fix --config=with-fix

# ---- Per-version test targets ----

[js_test(
    name = "test_%s" % name,
    copy_data_to_bin = False,
    entry_point = "check_dirname.mjs",
    node_toolchain = toolchain,
    preserve_symlinks_main = False,
) for name, toolchain in NODE_TOOLCHAINS.items()]

test_suite(
    name = "all_versions",
    tests = ["test_%s" % name for name in NODE_TOOLCHAINS],
)

# ---- Manual debugging targets (default toolchain) ----

js_binary(
    name = "run_bug",
    copy_data_to_bin = False,
    entry_point = "check_dirname.mjs",
    preserve_symlinks_main = False,
)

js_binary(
    name = "run_fix",
    copy_data_to_bin = False,
    entry_point = "check_dirname.mjs",
    preserve_symlinks_main = False,
)
