load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")

# Repro: esbuild path resolution escapes the sandbox
#
# esbuild on Linux is statically linked (LD_PRELOAD can't help), but on macOS
# it is dynamically linked, so DYLD_INSERT_LIBRARIES intercepts it directly.
#
# The fix/bug distinction is controlled by --config=with-fix in .bazelrc:
#   Bug:  bazel test //repro/esbuild-resolve:test
#   Fix:  bazel test //repro/esbuild-resolve:test --config=with-fix

js_binary(
    name = "run",
    copy_data_to_bin = False,
    data = [
        "src/app.js",
        "src/util.js",
        "//:node_modules/esbuild",
    ],
    entry_point = "bundle_check.mjs",
    preserve_symlinks_main = False,
)

js_test(
    name = "test",
    copy_data_to_bin = False,
    data = [
        "src/app.js",
        "src/util.js",
        "//:node_modules/esbuild",
    ],
    entry_point = "bundle_check.mjs",
    preserve_symlinks_main = False,
)
