load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")

# Repro: Vitest path resolution escapes the sandbox (issue #979)
#
# On Node <= 18.18.2, Vitest discovers test files via escaped paths
# because the JS patches don't take effect for ESM resolution.
#
# 1. REPRODUCE: bazel run //repro/vitest:run_bug
# 2. VERIFY FIX: bazel run //repro/vitest:run_fix --config=with-fix

js_binary(
    name = "run_bug",
    copy_data_to_bin = False,
    data = [
        "package.json",
        "vitest.config.mjs",
        "src/add.js",
        "src/add.test.js",
        "//:node_modules/vitest",
    ],
    entry_point = "run_vitest.mjs",
    preserve_symlinks_main = False,
)

js_test(
    name = "test_bug",
    copy_data_to_bin = False,
    data = [
        "package.json",
        "vitest.config.mjs",
        "src/add.js",
        "src/add.test.js",
        "//:node_modules/vitest",
    ],
    entry_point = "run_vitest.mjs",
    preserve_symlinks_main = False,
)

js_binary(
    name = "run_fix",
    copy_data_to_bin = False,
    data = [
        "package.json",
        "vitest.config.mjs",
        "src/add.js",
        "src/add.test.js",
        "//:node_modules/vitest",
    ],
    entry_point = "run_vitest.mjs",
    preserve_symlinks_main = False,
)

js_test(
    name = "test_fix",
    copy_data_to_bin = False,
    data = [
        "package.json",
        "vitest.config.mjs",
        "src/add.js",
        "src/add.test.js",
        "//:node_modules/vitest",
    ],
    entry_point = "run_vitest.mjs",
    preserve_symlinks_main = False,
)
